--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -9,8 +9,8 @@ on:
       - main
 
 jobs:
-  helm-lint-template:
-    name: 'Validate'
+  helm-lint:
+    name: 'Helm Lint'
     runs-on: ubuntu-latest
 
     steps:
@@ -23,7 +23,21 @@ jobs:
         version: v3.12.0 # specify the Helm version you want to use
 
     - name: Run Helm Lint
-      run: helm lint . #./path/to/your/chart 
+      run: helm lint . # Replace with the path to your chart
+
+  helm-template:
+    name: 'Helm Template'
+    runs-on: ubuntu-latest
+    needs: helm-lint # Ensure this runs after the lint job
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Helm
+      uses: azure/setup-helm@v3
+      with:
+        version: v3.12.0 # specify the Helm version you want to use
 
     - name: Run Helm Template
-      run: helm template . #./path/to/your/chart
+      run: helm template . # Replace with the path to your chart
